--- a/hdi_crm/i18n/vi.po
+++ b/hdi_crm/i18n/vi.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2025-11-27 00:00+0000\n"
 "Last-Translator: HDI Dev <dev@example.com>\n"
 "Language-Team: Vietnamese\n"
-"Language: vi\n"
+"Language: vi_VN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -80,7 +80,7 @@ msgid "Expected Revenue"
 msgstr "Doanh thu dự kiến"
 
 msgid "Assigned to"
-msgstr "Phụ trách"
+msgstr "Người phụ trách"
 
 msgid "Sales Team"
 msgstr "Đội bán hàng"
@@ -116,9 +116,6 @@ msgstr "Tên khách hàng"
 msgid "Internal Notes"
 msgstr "Ghi chú nội bộ"
 
-msgid "Expected Closing Date"
-msgstr "Ngày dự kiến đóng"
-
 msgid "Opened"
 msgstr "Mở"
 
@@ -141,9 +138,6 @@ msgstr "Ngày lên lịch"
 msgid "Completed Date"
 msgstr "Ngày hoàn thành"
 
-msgid "Assigned to"
-msgstr "Người phụ trách"
-
 msgid "Status"
 msgstr "Trạng thái"
 
@@ -151,9 +145,6 @@ msgid "Outcome"
 msgstr "Kết quả"
 
 # Customer view
-msgid "Customer"
-msgstr "Khách hàng"
-
 msgid "Contact Information"
 msgstr "Thông tin liên hệ"
 
@@ -162,9 +153,6 @@ msgstr "Địa chỉ"
 
 msgid "Search Customers"
 msgstr "Tìm kiếm khách hàng"
-
-msgid "Active"
-msgstr "Kích hoạt"
 
 msgid "Business"
 msgstr "Doanh nghiệp"
